[gd_scene load_steps=15 format=3 uid="uid://c8h9i0j1k2l3"]

[ext_resource type="Script" path="res://scripts/YazawaOfficeMenu.gd" id="1_yazawa"]
[ext_resource type="Texture2D" path="res://assets/images/backgrounds/oficina.png" id="2_office"]
[ext_resource type="Texture2D" path="res://assets/images/characters/yazawa_portrait.png" id="3_yazawa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.8, 0.6, 0.2, 0.9)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.8, 0.4, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.9, 0.7, 0.3, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.9, 0.5, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.7, 0.5, 0.15, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9, 0.7, 0.3, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4"]
bg_color = Color(0.2, 0.6, 0.8, 0.9)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.8, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5"]
bg_color = Color(0.3, 0.7, 0.9, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.5, 0.9, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6"]
bg_color = Color(0.15, 0.5, 0.7, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.7, 0.9, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7"]
bg_color = Color(0.4, 0.4, 0.4, 0.8)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.6, 0.6, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8"]
bg_color = Color(0.5, 0.3, 0.3, 0.9)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.7, 0.5, 0.5, 1)

[node name="YazawaOfficeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_yazawa")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_office")
expand_mode = 1
stretch_mode = 6

[node name="ColorOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.1, 0.05, 0.8)

[node name="GoldParticles" type="CPUParticles2D" parent="."]
position = Vector2(960, 540)
amount = 50
emission_shape = 3
emission_rect_extents = Vector2(1000, 600)
direction = Vector2(0, -1)
initial_velocity_min = 10.0
initial_velocity_max = 30.0
gravity = Vector2(0, -20)
scale_amount_min = 0.3
scale_amount_max = 0.8
color = Color(1, 0.8, 0.2, 0.6)

[node name="YazawaPortraitContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = -50.0
offset_bottom = 300.0

[node name="YazawaPortrait" type="TextureRect" parent="YazawaPortraitContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("3_yazawa")
expand_mode = 1
stretch_mode = 5

[node name="PortraitGlow" type="ColorRect" parent="YazawaPortraitContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(1, 0.8, 0.2, 0.3)
z_index = -1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 40

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "üëë DESPACHO PRESIDENCIAL YAZAWA"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 72
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3

[node name="SubtitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Sal√≥n Ejecutivo de M√°ximo Poder"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.9, 0.7, 1)

[node name="ButtonsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="MainButtonRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1
theme_override_constants/separation = 25

[node name="EncargosButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer/MainButtonRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(400, 160)
text = "üëî ENCARGOS EJECUTIVOS"
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.9, 0.9, 0.9, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")

[node name="CampanasButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer/MainButtonRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(400, 160)
text = "üìà CAMPA√ëAS PRESIDENCIALES"
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.9, 0.9, 0.9, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_4")
theme_override_styles/hover = SubResource("StyleBoxFlat_5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6")

[node name="SecondaryButtonRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 2
alignment = 1
theme_override_constants/separation = 20

[node name="EstadisticasButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer/SecondaryButtonRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(280, 120)
text = "üìâ AN√ÅLISIS ESTRAT√âGICO"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.9, 0.9, 0.9, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")

[node name="LigasButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer/SecondaryButtonRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(280, 120)
text = "üèÜ OTRAS LIGAS"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.9, 0.9, 0.9, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_4")
theme_override_styles/hover = SubResource("StyleBoxFlat_5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6")

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
custom_minimum_size = Vector2(300, 60)
text = "‚¨ÖÔ∏è Salir del Despacho"
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.8, 0.8, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_7")
theme_override_styles/hover = SubResource("StyleBoxFlat_8")
